<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_names">MondayFairy</string>
    <string name="app_name">월요요정이 보고싶어</string>
    <string name="alarm_describe">*간단 사용법*
        \n1.날짜와 시간(24시간 기준)을 선택합니다.
        \n2.멤버를 선택하고 설정을 저장하면 월요요정에게 연락이 옵니다.</string>
    <string name="alarm_date">일정선택</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_date_spinner_default">날짜선택</string>
    <string name="alarm_text_spinner_default">시간선택</string>
    <string name="member_pick_text">멤버선택(다중선택 가능, 모두제외)</string>
    <string name="setting_save_text">월요요정 예약완료</string>
    <string name="fairy_call_text">월요요정 빠른 연락받기</string>
    <string-array name="array_member_names">
        <item>원영</item>
        <item>꾸라</item>
        <item>유리</item>
        <item>예나</item>
        <item>유진</item>
        <item>나코</item>
        <item>은비</item>
        <item>혜원</item>
        <item>히짱</item>
        <item>채원</item>
        <item>민주</item>
        <item>채연</item>
        <item>모두</item>
    </string-array>
    <string-array name="array_member_names_eng">
        <item>wonyoung</item>
        <item>sakura</item>
        <item>yuri</item>
        <item>yena</item>
        <item>yujin</item>
        <item>nako</item>
        <item>eunbi</item>
        <item>hyewon</item>
        <item>hitomi</item>
        <item>chaewon</item>
        <item>minju</item>
        <item>chaeyeon</item>
        <item>izone</item>
    </string-array>
    <string-array name="array_call_users">
        <item>워뇽이</item>
        <item>꾸라</item>
        <item>조댕찌</item>
        <item>최오리</item>
        <item>안유댕</item>
        <item>나코나코땅땅</item>
        <item>권땡모</item>
        <item>강광배</item>
        <item>히짱</item>
        <item>자몽워니</item>
        <item>밍주가또오~!</item>
        <item>이째욘</item>
    </string-array>
    <string name="save_confirm_dialog_title">설정 완료</string>
    <string name="fail_confirm_dialog_title">설정 미완료</string>
    <string name="save_confirm_dialog_message">월요요정과의 통화를 위한 준비가 끝났습니다!\n그럼 월요요정이 찾아올때까지 기다려주세요!</string>
    <string name="fail_confirm_dialog_message">\n다시 확인하시고 설정을 완료해주세요</string>
    <string name="fail_now_call_dialog_title">월요요정 미선택</string>
    <string name="fail_now_call_dialog_message">월요요정을 선택하지 않으셨네요.\n월요요정을 선택하시고 \n다시 눌러주세요!</string>
    <string name="positive_btn_text">확인</string>
    <string name="call_end_text">통화종료</string>
    <string name="talk_time_default_text">00:00</string>
    <string name="channel_name">월요요정 알림</string>
    <string name="channel_description">월요요정 알림채널</string>
    <string name="call_view_text">전화가 왔습니다</string>
    <!--Description Text-->
    <string name="bgm_play_btn_description_text">배경음악 재생</string>
    <string name="dev_purpose_description_text">개발목적 알림 다이얼로그</string>
    <string name="dev_purpose_close_description_text">개발목적 알림 다이얼로그 종료</string>
    <string name="alarm_setting_btn_description_text">알람설정 완료</string>
    <string name="call_play_btn_description_text">월요요정 영상 재생</string>
    <string name="call_off_btn_description_text">월요요정 영상 종료</string>
    <string name="date_picker_btn_description_text">날짜선택</string>
    <string name="time_picker_btn_description_text">시간선택</string>
    <string name="call_now_btn_description_text">월요요정 영상 알람없이 바로 재생</string>
    <string name="camera_on_off_btn_description_text">전면 카메라 켜기 끄기</string>



</resources>
